@@ -487,9 +487,15 @@ sub _set_enabled_backends {
         }
         for my $b (@{$backends}) {
             # peer key can be name too
-            my $peer = $c->{'db'}->get_peer_by_key($b);
-            die("got no peer for: ".$b) unless defined $peer;
-            $disabled_backends->{$peer->peer_key()} = 0;
+            if($b eq 'ALL') {
+                for my $peer (@{$c->{'db'}->get_peers()}) {
+                    $disabled_backends->{$peer->peer_key()} = 0;
+                }
+            } else {
+                my $peer = $c->{'db'}->get_peer_by_key($b);
+                die("got no peer for: ".$b) unless defined $peer;
+                $disabled_backends->{$peer->peer_key()} = 0;
+            }
         }
     }
     ###############################
